# perfvect

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  perfvect.natvis
cmake/: config.cmake.in
include/perfvect/: auto_vector.h  iterator.h  small_vector.h  static_vector.h  vector.h
test/: .runsettings  CMakeLists.txt  helper.h  small_vector_test.cpp  static_vector_test.cpp
test/src/: auto_vector_test.cpp  helper.h  main.cpp  small_vector_test.cpp  static_vector_test.cpp  vector_test.cpp
